[package]
name = "cerium"
version = "0.2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", features = ["dynamic", "jpeg"] }
lazy_static = "^1.4"
game_statics = { path = "../game-statics" }
client_net = { path = "../client-net" }
