[package]
name = "client_net"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nanoserde = { git = "https://github.com/0HyperCube/nanoserde", branch = "add-128-bit" }
tokio = { version = "1.10", features = ["rt-multi-thread", "net", "io-util", "sync"] }
packets = { path = "../packets" }
log = "0"
thiserror = "1.0"
crossbeam-channel = "0.5"
