[package]
name = "client_net"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
net = { path = "../net" }
log = "0"
thiserror = "1.0"
async-channel = "1.6"
bevy = { git = "https://github.com/bevyengine/bevy", features = ["dynamic"] }
