[package]
name = "packets"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["client", "server"]
server = []
client = []


[dependencies]
nanoserde = { git = "https://github.com/0HyperCube/nanoserde", branch = "add-128-bit" }
tokio = { version = "1.10", features = ["rt-multi-thread", "net", "io-util"] }
