[package]
name = "server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
packets = {path = "../packets", features = ["server"]}
argon2 = "0.2"
rand_core = { version = "0.6", features = ["std"] }
lazy_static = "1.4"
