[package]
name = "server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
net = {path = "../net"}
argon2 = "0.2"
rand_core = { version = "0.6", features = ["std"] }
lazy_static = "1.4"
simple_logger = "1.13"
log = "0.4"
async-channel = "1.6"
